Issue #SB-11964 fix: FIXED: download icon jump {animation, sync with downloads}

--- a/src/component/application-header/application-header.scss
+++ b/src/component/application-header/application-header.scss
@@ -13,9 +13,15 @@
     }
 
     @keyframes jump {
-        0%   {left:0px; top:0px;}
-        50%  {left:0; top:10px;}
-        100% {left:0px; top:0px;}
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-10px);
+      }
+      60% {
+        transform: translateY(-6px);
+      }
     }
 
     .dw-icon{
@@ -24,7 +30,7 @@
 
     .jump-animation{
         display: inline-block;
-        animation: jump 2s linear infinite;
+      animation: jump 2s infinite;
         position: relative;
     }
 }
